2001-11-12  Yoshinori K. Okuji  <okuji@gnu.org>

	* docs/grub.texi: The copyright of this file is only held by
	Free Software Foundation, Inc., as Erich Boleyn has assigned his
	copyright to the FSF.
	* stage1/stage1.S: Likewise.
	* stage2/asm.S: Likewise.
	* stage2/boot.c: Likewise.
	* stage2/builtins.c: Likewise.
	* stage2/char_io.c: Likewise.
	* stage2/cmdline.c: Likewise.
	* stage2/common.c: Likewise.
	* stage2/disk_io.c: Likewise.
	* stage2/fat.h: Likewise.
	* stage2/filesys.h: Likewise.
	* stage2/freebsd.h: Likewise.
	* stage2/fsys_ext2fs.c: Likewise.
	* stage2/fsys_fat.c: Likewise.
	* stage2/fsys_ffs.c: Likewise.
	* stage2/gunzip.c: Likewise.
	* stage2/i386-elf.h: Likewise.
	* stage2/mb_header.h: Likewise.
	* stage2/mb_info.h: Likewise.
	* stage2/pc_slice.h: Likewise.
	* stage2/shared.h: Likewise.
	* stage2/stage1_5.c: Likewise.
	* stage2/stage2.c: Likewise.
	* stage2/start.S: Likewise.
	
2001-11-07  Yoshinori K. Okuji  <okuji@gnu.org>

	* stage2/builtins.c (terminal_func) [!SUPPORT_SERIAL]: Disable
	the wait code, as it is usable only when serial support is on.
	Reported by Karl Hammar <karl@kalle.csb.ki.se>.
	
2001-10-27  Yoshinori K. Okuji  <okuji@gnu.org>

	JFS and XFS support is added.
	
	From Serguei Tzukanov <tzukanov@narod.ru>:
	* configure.in (--disable-jfs): New option.
	(--disable-xfs): Likewise.
	* stage2/Makefile.am (noinst_HEADERS): Added jfs.h and xfs.h.
	(libgrub_a_SOURCES): Added fsys_jfs.c and fsys_xfs.c.
	(libgrub_a_CFLAGS): Added -DFSYS_JFS=1 and -DFSYS_XFS=1.
	(pkgdata_DATA): Added jfs_stage1_5 and xfs_stage1_5.
	(noinst_PROGRAMS): Added jfs_stage1_5.exec and
	xfs_stage1_5.exec.
	(pre_stage2_exec_SOURCES): Added fsys_jfs.c and fsys_xfs.c.
	(jfs_stage1_5_exec_SOURCES): New variable.
	(jfs_stage1_5_exec_CFLAGS): Likewise.
	(jfs_stage1_5_exec_ASFLAGS): Likewise.
	(jfs_stage1_5_exec_LDFLAGS): Likewise.
	(xfs_stage1_5_exec_SOURCES): Likewise.
	(xfs_stage1_5_exec_CFLAGS): Likewise.
	(xfs_stage1_5_exec_ASFLAGS): Likewise.