@@ -3,6 +3,7 @@ NEWS - list of user-visible changes between releases of GRUB
 New in 0.91:
 * Support for Linux DAC960 is added.
 * JFS and XFS support is added.
+* The commands "hide" and "unhide" support logical partitions.
 * Important bugfixes are made for ReiserFS, APM, TFTP, etc.
 
 New in 0.90 - 2001-07-11:
